fix: clear whitespaces in css

--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -16,7 +16,7 @@
 }
 
 .popup__save-button:hover {
-  background-color: rgba(0, 0, 0, .8)
+  background-color: rgba(0, 0, 0, .8);
 }
 
 @media screen and (max-width: 709px) {
